--- a/templates/index.html
+++ b/templates/index.html
@@ -3,16 +3,50 @@
 {% block content %}
 
 <div class="container-fluid">
-    
-    <h2 id="cover-text">Hej!</h2>
     <div class="row">
-        {% for booking in booking_view %}
-        <div class="image-container">
-            <div class="image-flash">
-                <p class="guest">Guest: {{ booking.guest }}</p>
-            </div>
+        <div class="col-md-4">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h2 id="cover-text">Book a table:</h2>
+                     
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        <table>
+                        {{ form.as_table }}
+                        </table>
+                        <input type="submit" value="Send message">
+                    </form>
+
+                    <form action="book_urls" method="post">
+                        <label for="booking_day">What day do you want to book a table?<i class="fa-regular fa-calendar"></i></label>
+                        <input id="booking_day" list="{{ booking_day }}" value="{{ booking_day }}"> 
+                        
+                        <label for="booking_time">Do you want to eat early or late? <i class="fa-regular fa-clock"></i></label>
+                        <input id="booking_time" type="text" value="{{ booking_time }}"> 
+                       
+                        <label for="number_of_guests">How many guests? <i class="fa-solid fa-users"></i></label>
+                        <input id="number_of_guests" type="text" value="{{ number_of_guests }}">
+
+                        <label for="guest">What's your name? <i class="fa-regular fa-user"></i></label>
+                        <input id="guest" type="text" value="{{ guest }}">
+
+
+                        <label for="guest_email">Email? <i class="fa-regular fa-envelope"></i></label>
+                        <input id="guest_email" type="email" value="{{ guest_email }}">
+
+                        <label for="allergies">Do you have any allergies? <i class="fa-solid fa-hand-dots"></i></label>
+                        <input id="allergies" type="text" value="{{ allergies }}">
+
+                        <input type="submit" value="Let's book a table">
+                        
+                    </form>
+                </div>
+            </div>    
         </div>
-        {% endfor %}
+        {{ booking.guest }}
+
+        {{ booking.booking_day }}
+        
     </div>
 </div>
 {% endblock %}
